sample-app/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simpleweb
  name: simpleweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleweb
  strategy: {}
  template:
    metadata:
      labels:
        app: simpleweb
    spec:
      serviceAccountName: simpleweb
      containers:
      - image: ghcr.io/kwkoo/simpleweb-training
        name: simpleweb-training
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
        resources: {}
status: {}
