sample-app/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simpleweb
  name: simpleweb
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: simpleweb
status:
  loadBalancer: {}
