sample-app/yaml/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: simpleweb
  name: simpleweb
spec:
  port:
    targetPort: 8080
  to:
    name: simpleweb
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
status: {}
